2001-07-06 11:40 GMT +1 Ignacio Ortiz <ignacio@ozs.com>
   * source/rtl/mlcount.c
      * fix for tab character expansion buglet

2001-07-05 22:40 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   *utils/hbmake/hbmake.prg
      *Fixed an Bug related to creation of makefile when filename and extension
       is all upper cased
   +Support for ! command and !iffile

2001-07-05 01:29 UTC-0800 Brian Hays <bhays@abacuslaw.com>

   * source/rtl/memoline.c
      * Ignacio's fix for tab character expansion buglet

2001-07-02 23:42 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/rtl/tget.prg
     ! Fixed method Reset() of TGet class, so that it sets the :TypeOut
       variable to .F.
       Fix provided by Istvan Foldi <foldii@terrasoft.hu>

2001-06-30 10:30 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/vm/dynsym.c
     + New profiler support functions added
       __DYNSISFUN( nDynSIndex ) --> .t. | .f.
          returns .t. if a dynamic symbol has a function/procedure pointer,
          given its dynamic symbol index.

       __DYNSGETPRF( nDynSIndex ) --> { nTimes, nTime }
          returns an array with a function or procedure
          called and consumed times, given its dynamic symbol index.

   * source/rtl/profiler.prg
     + Added support for functions and procedures.

2001-06-30 09:40 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/vm/hvm.c
     + Added profiler support for functions and procedures

2001-06-30 09:25 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/vm/dynsym.c
     + Added profiler initialization for created dynamic symbols

2001-06-30 08:45 GMT+1 Antonio Linares <alinares@fivetech.com>
   * include/hbvmpub.h
     + Added profiler support to the dynamic symbol structure

2001-06-29 18:40 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * contrib/Makefile
    + Build the ct3 and gt libraries along with the misc library.
  * include/hbver.h
    * Version 0.37a, dated 2001-06-29.
  * source/rtl/Makefile